--- a/WoldCupApp18/src/Views/FXMLShowStadiums.fxml
+++ b/WoldCupApp18/src/Views/FXMLShowStadiums.fxml
@@ -9,19 +9,19 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="654.0" prefWidth="874.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLShowStadiumsController">
+<AnchorPane id="AnchorPane" prefHeight="654.0" prefWidth="874.0" style="-fx-background-color: #353b48;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLShowStadiumsController">
    <children>
-      <Label layoutX="183.0" layoutY="22.0" text="Liste Des Stades" textFill="#5e0ad3">
+      <Label layoutX="183.0" layoutY="22.0" text="List Stadium" textFill="WHITE">
          <font>
             <Font size="30.0" />
          </font>
       </Label>
-      <TableView fx:id="table" editable="true" layoutX="10.0" layoutY="127.0" prefHeight="200.0" prefWidth="523.0">
+      <TableView fx:id="table" editable="true" layoutX="93.0" layoutY="127.0" prefHeight="200.0" prefWidth="523.0">
         <columns>
           <TableColumn fx:id="id" prefWidth="37.0" text="ID" visible="false" />
-          <TableColumn fx:id="name" prefWidth="120.0" text="Nom Stade" />
-            <TableColumn fx:id="location" prefWidth="109.0" text="Localisation Stade" />
-            <TableColumn fx:id="capacity" prefWidth="143.0" text="Capacite Stade" />
+          <TableColumn fx:id="name" prefWidth="120.0" text="Stadium Name" />
+            <TableColumn fx:id="location" prefWidth="109.0" text="Stadium Location" />
+            <TableColumn fx:id="capacity" prefWidth="143.0" text="Stadium Capacity" />
             <TableColumn prefWidth="76.66668701171875" text="XMAP" fx:id="xmap" />
             <TableColumn fx:id="ymap" prefWidth="69.33331298828125" text="YMAP" />
         </columns>
@@ -29,25 +29,25 @@
             <Blend />
          </effect>
       </TableView>
-      <Button fx:id="btndelete" layoutX="14.0" layoutY="96.0" mnemonicParsing="false" onAction="#delete" text="Supprimer Stade" textFill="#3d0cdd" />
-      <Button fx:id="Update" layoutX="122.0" layoutY="96.0" mnemonicParsing="false" onAction="#UpdateStadium" text="Modifier Stade" textFill="#710eda" />
-      <Button fx:id="goback" layoutX="227.0" layoutY="96.0" mnemonicParsing="false" onAction="#goBack" text="Ajouter Stade" textFill="#660add" />
-      <TextField fx:id="Recherche" layoutX="323.0" layoutY="96.0" promptText="Rechercher" />
-      <ChoiceBox fx:id="choiseBox" layoutX="482.0" layoutY="96.0" prefHeight="25.0" prefWidth="126.0" />
-      <Label layoutX="21.0" layoutY="356.0" text="Nom Stade :" textFill="#4d0cc6" />
-      <Label layoutX="21.0" layoutY="393.0" text="Localisation stade :" textFill="#5f0ec3" />
-      <Label layoutX="21.0" layoutY="426.0" text="Capacite Stade :" textFill="#510ebc" />
-      <Label layoutX="323.0" layoutY="356.0" text="Photo Stade" textFill="#5506b5" />
-      <Label layoutX="20.0" layoutY="465.0" text="Stade XMAP :" textFill="#510cb2" />
-      <Label layoutX="21.0" layoutY="499.0" text="Stade YMAP :" textFill="#6308da" />
-      <TextField fx:id="StadiumName" layoutX="141.0" layoutY="352.0" promptText="Nom de stade" />
-      <TextField fx:id="StadiumLocation" layoutX="141.0" layoutY="389.0" promptText="Localisation de stade" />
-      <TextField fx:id="StadiumCapacity" layoutX="141.0" layoutY="422.0" promptText="Capacité de stade" />
-      <TextField fx:id="XMAP" layoutX="141.0" layoutY="461.0" promptText="Latitude" />
-      <TextField fx:id="YMAP" layoutX="141.0" layoutY="495.0" promptText="Longtitude" />
-      <ImageView fx:id="PicViewer" fitHeight="169.0" fitWidth="224.0" layoutX="421.0" layoutY="351.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="ChosePic" layoutX="324.0" layoutY="381.0" mnemonicParsing="false" onAction="#ChosePicture" text="Select Photo" textFill="#5f09d7" />
-      <Button fx:id="map" layoutX="545.0" layoutY="127.0" mnemonicParsing="false" onAction="#GotoMap" text="Afficher les stades dans laMAP" textFill="#730bf2" />
-      <Button fx:id="acceuil" layoutX="14.0" layoutY="67.0" mnemonicParsing="false" onAction="#acceuil" text="Acceuil" textFill="#7009ee" />
+      <Button fx:id="btndelete" layoutX="92.0" layoutY="96.0" mnemonicParsing="false" onAction="#delete" text="Delete Stadium" textFill="#1f0f54" />
+      <Button fx:id="Update" layoutX="225.0" layoutY="96.0" mnemonicParsing="false" onAction="#UpdateStadium" text="Update Stadium" textFill="#3c1565" />
+      <Button fx:id="goback" layoutX="363.0" layoutY="96.0" mnemonicParsing="false" onAction="#goBack" text="Add Stadium" textFill="#2f1254" />
+      <TextField fx:id="Recherche" layoutX="467.0" layoutY="96.0" promptText="Rechercher" text="Search" />
+      <ChoiceBox fx:id="choiseBox" layoutX="628.0" layoutY="96.0" prefHeight="25.0" prefWidth="126.0" />
+      <Label layoutX="105.0" layoutY="355.0" text="Stadium name :" textFill="WHITE" />
+      <Label layoutX="105.0" layoutY="392.0" text="Stadium Location :" textFill="WHITE" />
+      <Label layoutX="105.0" layoutY="425.0" text="Stadium Capacity :" textFill="WHITE" />
+      <Label layoutX="392.0" layoutY="351.0" text="Stadium Picture :" textFill="WHITE" />
+      <Label layoutX="104.0" layoutY="464.0" text="Stadium XMAP :" textFill="WHITE" />
+      <Label layoutX="105.0" layoutY="498.0" text="Stadium YMAP :" textFill="#fcfcfc" />
+      <TextField fx:id="StadiumName" layoutX="225.0" layoutY="351.0" promptText="stadium Name" />
+      <TextField fx:id="StadiumLocation" layoutX="225.0" layoutY="388.0" promptText="Stadium Location" />
+      <TextField fx:id="StadiumCapacity" layoutX="225.0" layoutY="421.0" promptText="Stadium Capacity" />
+      <TextField fx:id="XMAP" layoutX="225.0" layoutY="460.0" promptText="Latitude" />
+      <TextField fx:id="YMAP" layoutX="225.0" layoutY="494.0" promptText="Longtitude" />
+      <ImageView fx:id="PicViewer" fitHeight="169.0" fitWidth="224.0" layoutX="526.0" layoutY="359.0" pickOnBounds="true" preserveRatio="true" />
+      <Button fx:id="ChosePic" layoutX="389.0" layoutY="381.0" mnemonicParsing="false" onAction="#ChosePicture" text="Choose Picture" textFill="#280e4d" />
+      <Button fx:id="map" layoutX="622.0" layoutY="127.0" mnemonicParsing="false" onAction="#GotoMap" text="Show Stadiums in map" textFill="#33125b" />
+      <Button fx:id="acceuil" layoutX="104.0" layoutY="67.0" mnemonicParsing="false" onAction="#acceuil" text="Home" textFill="#33125e" />
    </children>
 </AnchorPane>
