--- a/WoldCupApp18/src/Views/FXMLShowStations.fxml
+++ b/WoldCupApp18/src/Views/FXMLShowStations.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="595.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLShowStationsController">
+<AnchorPane id="AnchorPane" prefHeight="595.0" prefWidth="720.0" style="-fx-background-color: #353b48;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLShowStationsController">
    <children>
-      <Label layoutX="189.0" layoutY="21.0" text="Liste Des Stations" textFill="#4b0cd3">
+      <Label layoutX="189.0" layoutY="21.0" text="List of Stations" textFill="WHITE">
          <font>
             <Font size="32.0" />
          </font>
@@ -17,29 +17,29 @@
       <TableView fx:id="table" layoutX="22.0" layoutY="127.0" prefHeight="200.0" prefWidth="540.0">
         <columns>
           <TableColumn fx:id="id" prefWidth="53.0" text="ID" visible="false" />
-          <TableColumn fx:id="name" prefWidth="97.0" text="Nom Station" />
-            <TableColumn fx:id="location" prefWidth="134.0" text="Localisation Station" />
-            <TableColumn fx:id="type" prefWidth="98.0" text="Type Station" />
+          <TableColumn fx:id="name" prefWidth="97.0" text="Station Name" />
+            <TableColumn fx:id="location" prefWidth="134.0" text="Station Location " />
+            <TableColumn fx:id="type" prefWidth="98.0" text="Station Type " />
             <TableColumn prefWidth="74.0" text="X MAP" fx:id="x" />
             <TableColumn fx:id="y" prefWidth="82.0" text="Y MAP" />
         </columns>
       </TableView>
-      <Button fx:id="btndelete" layoutX="22.0" layoutY="93.0" mnemonicParsing="false" onAction="#deleteStation" text="Supprimer Stade" textFill="#5d05eb" />
-      <Button fx:id="Update" layoutX="130.0" layoutY="93.0" mnemonicParsing="false" onAction="#UpdateStation" text="Modifier Stade" textFill="#5608d3" />
-      <Button fx:id="goback" layoutX="227.0" layoutY="93.0" mnemonicParsing="false" onAction="#goback" text="Ajouter Station" textFill="#4f0ac6" />
-      <TextField fx:id="Recherche" layoutX="330.0" layoutY="93.0" prefHeight="25.0" prefWidth="119.0" promptText="Recherche" />
+      <Button fx:id="btndelete" layoutX="22.0" layoutY="93.0" mnemonicParsing="false" onAction="#deleteStation" text="Delete Station" textFill="#2b105b" />
+      <Button fx:id="Update" layoutX="130.0" layoutY="93.0" mnemonicParsing="false" onAction="#UpdateStation" text="Update Station" textFill="#300f65" />
+      <Button fx:id="goback" layoutX="240.0" layoutY="93.0" mnemonicParsing="false" onAction="#goback" text="Add Station" textFill="#2c115b" />
+      <TextField fx:id="Recherche" layoutX="330.0" layoutY="93.0" prefHeight="25.0" prefWidth="119.0" promptText="Search" />
       <ChoiceBox fx:id="choiseBox" layoutX="455.0" layoutY="93.0" prefHeight="25.0" prefWidth="119.0" />
-      <Label layoutX="40.0" layoutY="346.0" text="Nom Station :" textFill="#7b0fcd" />
-      <Label layoutX="40.0" layoutY="379.0" text="Localisation Station :" textFill="#720dd0" />
-      <Label layoutX="44.0" layoutY="410.0" text="Type Station :" textFill="#7d0bc9" />
-      <Label layoutX="41.0" layoutY="443.0" text="Map X :" textFill="#5e0ab9" />
-      <Label layoutX="41.0" layoutY="478.0" text="Map Y :" textFill="#6e0fd3" />
-      <TextField fx:id="StationName" layoutX="201.0" layoutY="342.0" promptText="Nom de station" />
-      <TextField fx:id="StationLocation" layoutX="201.0" layoutY="375.0" promptText="Localisation de station" />
+      <Label layoutX="40.0" layoutY="346.0" text="Station Name :" textFill="WHITE" />
+      <Label layoutX="40.0" layoutY="379.0" text="Station Location :" textFill="#eeeeee" />
+      <Label layoutX="44.0" layoutY="410.0" text="Station Type :" textFill="WHITE" />
+      <Label layoutX="41.0" layoutY="443.0" text="Map X :" textFill="#f4f4f5" />
+      <Label layoutX="41.0" layoutY="478.0" text="Map Y :" textFill="#f8f8f8" />
+      <TextField fx:id="StationName" layoutX="201.0" layoutY="342.0" promptText="Station Name" />
+      <TextField fx:id="StationLocation" layoutX="201.0" layoutY="375.0" promptText="Station Location" />
       <TextField fx:id="StationType" layoutX="201.0" layoutY="406.0" promptText="bus/train/airport.." />
       <TextField fx:id="XMAP" layoutX="201.0" layoutY="439.0" promptText="Latitude" />
       <TextField fx:id="YMAP" layoutX="201.0" layoutY="474.0" promptText="Longtitude" />
-      <Button fx:id="Map" layoutX="589.0" layoutY="93.0" mnemonicParsing="false" onAction="#AfficherMap" text="Afficher MAP" textFill="#6010d0" />
-      <Button fx:id="acceuil" layoutX="22.0" layoutY="56.0" mnemonicParsing="false" onAction="#acceuil" text="Acceuil" textFill="#720ed7" />
+      <Button fx:id="Map" layoutX="589.0" layoutY="93.0" mnemonicParsing="false" onAction="#AfficherMap" text="Show MAP" textFill="#321061" />
+      <Button fx:id="acceuil" layoutX="22.0" layoutY="56.0" mnemonicParsing="false" onAction="#acceuil" text="Home" textFill="#310d57" />
    </children>
 </AnchorPane>
