--- a/WoldCupApp18/src/Views/FXMLAddTeam.fxml
+++ b/WoldCupApp18/src/Views/FXMLAddTeam.fxml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.paint.*?>
-<?import com.jfoenix.validation.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="598.0" prefWidth="525.0" style="-fx-background-color: #353b48;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLAddTeamController">
+<AnchorPane id="AnchorPane" prefHeight="598.0" prefWidth="525.0" style="-fx-background-color: #353b48;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLAddTeamController">
     <stylesheets>
         <URL value="@fxml.css" />
     </stylesheets>
@@ -37,7 +35,5 @@
       <Button fx:id="retour" layoutX="151.0" layoutY="555.0" mnemonicParsing="false" onAction="#retourner" style="-fx-background-color: #f5f6fa;" text="Retour" />
       <ChoiceBox fx:id="groupcb" layoutX="222.0" layoutY="313.0" prefWidth="150.0" style="-fx-background-color: #f5f6fa;" />
       <ChoiceBox fx:id="TEAM_CONTINENT" layoutX="223.0" layoutY="367.0" prefWidth="150.0" style="-fx-background-color: #f5f6fa;" />
-      <Button fx:id="stop" layoutX="398.0" layoutY="22.0" mnemonicParsing="false" onAction="#stopper" style="-fx-background-color: #f5f6fa;" text="Stop" />
-      <Button fx:id="play" layoutX="452.0" layoutY="22.0" mnemonicParsing="false" onAction="#play" style="-fx-background-color: #f5f6fa;" text="Play" />
    </children>
 </AnchorPane>
